5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2564.log
== TEST (2019-06-06 15:17:41) 
-- CODE:
v = array(eval(input("insira o numero de gols:")))
u = array(eval(input("insira o numero de gols:")))

cont = zeros(3,dtype=int)

for i in range(size(v)):
	if(v[i] > u[i]):
		cont[0] = cont[0] + 1
	elif(v[i] == u[i]):
		cont[1] = cont[1] + 1
	elif(v[i] < u[i]):
		cont[2] = cont[2] + 1

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:18:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira o numero de gols:")))
u = array(eval(input("insira o numero de gols:")))

cont = zeros(3,dtype=int)

for i in range(size(v)):
	if(v[i] > u[i]):
		cont[0] = cont[0] + 1
	elif(v[i] == u[i]):
		cont[1] = cont[1] + 1
	elif(v[i] < u[i]):
		cont[2] = cont[2] + 1

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:18:51) 
-- CODE:
from numpy import *
v = array(eval(input("insira o numero de gols:")))
u = array(eval(input("insira o numero de gols:")))

cont = zeros(3,dtype=int)

for i in range(size(v)):
	if(v[i] > u[i]):
		cont[0] = cont[0] + 1
	elif(v[i] == u[i]):
		cont[1] = cont[1] + 1
	elif(v[i] < u[i]):
		cont[2] = cont[2] + 1

print(cont)
-- EXECUTION TIME:
0.914651
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:41:31) 
-- CODE:
from numpy import *

v = array(eval(input("Insira os gols efetuados:")))
u = array(eval(input("iInsira o numero de gols sofridos:")))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] > u[i]):
		cont[0] = cont[0] + 1
	elif(v[i] == u[i]):
		cont[1] = cont[1] + 1
	elif(v[i] < u[i]):
		cont[2] = cont[2] + 1

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:42:02) 
-- CODE:
from numpy import *

v = array(eval(input("Insira os gols efetuados:")))
u = array(eval(input("iInsira o numero de gols sofridos:")))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] > u[i]):
		cont[0] = cont[0] + 1
	elif(v[i] == u[i]):
		cont[1] = cont[1] + 1
	elif(v[i] < u[i]):
		cont[2] = cont[2] + 1

print(cont)
-- EXECUTION TIME:
1.09663
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
